--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>jenkins CI/CD pipeline</title>
 <body>
-<h1> welcome to intellipaat </h1>
+<h1> welcome to intellipaat devops </h1>
 </body>
 </html>
 
